# Info-Semester2

./: .gitignore  CMakeLists.txt  Info-Semester2.sln  README.md
inf_ue01/: CMakeLists.txt  Source.c  inf_ue01.vcxproj  main.c
inf_ue02/: CMakeLists.txt  Source.c  inf_ue02.vcxproj  inf_ue02.vcxproj.filters  main.c  myList.h  myStruct.h
inf_ue03/: CMakeLists.txt  Source.c  inf_ue03.vcxproj  main.c
inf_ue04/: CMakeLists.txt  Source.c  inf_ue04.vcxproj  inf_ue04.vcxproj.filters  main.c
inf_ue05/: CMakeLists.txt  Source.c  inf_ue05.vcxproj  main.c  myList.h
inf_ue06/: CMakeLists.txt  Source.c  binarytree.h  inf_ue06.vcxproj  inf_ue06.vcxproj.filters  main.c
inf_ue07/: CMakeLists.txt  Source.c  inf_ue07.vcxproj  inf_ue07.vcxproj.filters  main.c
inf_ue08/: CMakeLists.txt  Source.c  binarySearchTree.h  inf_ue08.vcxproj  inf_ue08.vcxproj.filters  main.c  queue.h
inf_ue09/: CMakeLists.txt  Source.c  heap.h  inf_ue09.vcxproj  inf_ue09.vcxproj.filters  main.c
inf_ue10/: CMakeLists.txt  ET_I_II_2122_U10_Vorlage.c  graph.h  inf_ue10.vcxproj  inf_ue10.vcxproj.filters  main.c
inf_ue11/: CMakeLists.txt  ET_I_II_2122_U11_Vorlage.c  inf_ue11.vcxproj  inf_ue11.vcxproj.filters  main.c  sortingHelperStructures.c  sortingHelperStructures.h
inf_ue12/: CMakeLists.txt  ET_I_II_2122_U11_Vorlage.c  inf_ue12.vcxproj  main.c  numArrays.h  sortingHelperStructures.h
inf_ue13/: CMakeLists.txt  chessboard.c  chessboard.h  main.c  maze.c  maze.h
inf_ue5/: CMakeLists.txt
inf_ue6/: CMakeLists.txt  binarytree.h  main.c
