cmake_minimum_required(VERSION 3.22)
project(Info-Semester2)

set(CMAKE_C_STANDARD 17)
set(CMAKE_C_EXTENSIONS False)

add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue01" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue01_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue02" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue02_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue03" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue03_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue04" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue04_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue05" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue05_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue06" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue06_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue07" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue07_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue08" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue08_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue09" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue09_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue10" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue10_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue11" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue11_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue12" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue12_output")
add_subdirectory("${PROJECT_SOURCE_DIR}/inf_ue13" "${PROJECT_SOURCE_DIR}/cmake-build-debug/inf_ue13_output")